# DistriQKDSim

./: CMakeLists.txt  QKDSim.pro  README.md  init.sql  recorder(1w)txt  simple_test  simple_test.cpp  test_multi_domain.cpp
Alg/: CMakeLists.txt  Demand.cpp  DistributedIDGenerator.h  Link.cpp  Link.h  Network.cpp  Network.h  Node.cpp  Node.h  QKDSim.cpp  QKDSim.h  RelayPath.h  Store.hpp  main_new.cpp  stdafx.h  targetver.h
Alg/Route/: BfsStrategy.cpp  BgpStrategy.cpp  BgpStrategy.h  BidBfsStrategy.cpp  BidBfsStrategy.h  CustomRouteStrategy.cpp  CustomRouteStrategy.h  ExampleStrategy.cpp  FibonacciHeap.h  KeyRateFibStrategy.cpp  KeyRateFibStrategy.h  KeyRateStrategy.cpp  KeyRateStrategy.h  MaxMinRateStrategy.cpp  MaxMinRateStrategy.h  MinTimeStrategy.cpp  MinTimeStrategy.h  MultiDomainRouteManager.cpp  MultiDomainRouteManager.h  OspfStrategy.cpp  OspfStrategy.h  RouteFactory.cpp  RouteFactory.h  demoRoute.cpp  demoRoute.h
Alg/Route/User/: CustomRouteStrategy.cpp  UserKeyRate.cpp  testRoute2.cpp
Alg/Sched/: AvgStrategy.cpp  AvgStrategy.h  CustomSchedStrategy.cpp  CustomSchedStrategy.h  FCFSStrategy.cpp  FCFSStrategy.h  MinStrategy.cpp  MinStrategy.h  ReservationStrategy.cpp  ReservationStrategy.h  SchedFactory.cpp  SchedFactory.h
Config/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  config copy.txt  config.txt
GUI/: qkdsim.cpp
Input/: Input_generator.py  domain_gen.py  input_generator_multi.py  network(1000).csv
Input/data/: demand.csv  network_full.csv
Test/: test_route.cpp
Web/: AppComponent.hpp  CMakeLists.txt  Utils.cpp  Utils.hpp  WorkerComponent.hpp  main.cpp
Web/client/: ControlClient.hpp
Web/controller/: DemandController.hpp  LinkController.hpp  SimController.hpp  StaticController.hpp  TopologyConfigController.hpp  UserStrategyController.hpp
Web/dao/: SimDao.cpp  SimDao.hpp
Web/dto/: DTOs.hpp  ListDTO.hpp  SimDTOs.hpp
Web/static/: compare.html  getmonaco.sh  history-detail.html  history.html  index.html  index2.html  index_v1.html  index_v2.html  index_v3.html  routeCode.html  route_old.html  schedCode.html  sim.html  sim_v1.html  topology-config.html
Web/svc/: NetService.cpp  NetService.hpp  TopologyConfigService.cpp  TopologyConfigService.hpp
data/demands/: 1domain_1000node  2domain_4000node.csv  4domain-5000node.csv  demand(5000).csv  domain_demand.csv  test1
data/networks/: 1domain_1000node  4domain-5000node.csv  domain_network.csv  network(5000).csv  test  test1
examples/: multi_domain_demo.cpp
